tests/errors/calls/call-field.fn
---
Description: Calling a field that is not a function
Expected: FN3202
---

type Box
{
    value: i32

    init(v: i32)
    {
        this.value = v
    }
}

type Program
{
    static fn Main -> i32
    {
        var b = Box(5)
        return b.value(1)
    }
}
